mengubah beberapa bagian

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                            <li class="stars"><i class="fa-solid fa-star"></i></li>
                            <li class="stars"><i class="fa-solid fa-star"></i></li>
                           </ul>
-                          <h3 class="client-name">Adnan Farooqui</h3>
+                          <h3 class="client-name">Ziona Yaksha</h3>
                           <p class="para-client">Audionya jernih dan jelas di setiap level dengan earbuds yang semakin bagus dan lantang di bagian ujung atasnya.</p>
                           <h5 class="profession">Android Authorithy</h5>
                         </div>
@@ -371,33 +371,45 @@
         <div class="row">
           <div class="col-lg-6 col-md-12">
             <form action="form-origin">
-              <div class="row">
-                <div class="col-lg-6 col-md-12">
+              <div class="kontak">
+                <div class="col-lg col-md-12">
                   <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Full Name*" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Full Name*"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                    />
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-12">
+                <div class="col-lg col-md-12">
                   <div class="mb-3">
-                    <input type="email" class="form-control" placeholder="Email Address*" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Email Address*"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                    />
                   </div>
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <div class="mb-3">
-                        <textarea class="form-control" placeholder="Your Message" id="exampleFormControlTextarea1"></textarea>
-                      </div>
-                    </div>
+                </div>
+                <div class="col-lg col-md-12">
+                  <div class="mb-3">
+                    <textarea
+                      class="form-control"
+                      placeholder="Your Message"
+                      id="exampleFormControlTextarea1"
+                    ></textarea>
                   </div>
-
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <div class="mb-3 text-center">
-                        <a href="#" class="btn-contact">Send Message</a>
-                      </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="mb-3 text-center">
+                      <a href="#" class="btn-contact">Send Message</a>
                     </div>
                   </div>
                 </div>
-
               </div>
             </form>
           </div>
